corevpn (0.1.3) unstable; urgency=low

  * Changes in agent
  * Added suspended state for VPN entity

 -- Maciej Nabozny <mn@mnabozny.pl> 15 Oct 2014 21:09:44 +0200


corevpn (0.1.2) unstable; urgency=low

  * Added get_list
  * Some small changes

 -- Maciej Nabozny <mn@mnabozny.pl> 15 Oct 2014 20:09:44 +0200


corevpn (0.1.1) unstable; urgency=low

  * Initial build

 -- Maciej Nabozny <mn@mnabozny.pl> 13 Oct 2014 20:09:44 +0200
