@@ -10,5 +10,9 @@ install:
 	mkdir -p $(DESTDIR)/var/lib/cloudOver/coreVpn/certs/
 	mkdir -p $(DESTDIR)/var/log/cloudOver/coreVpn/
 	mkdir -p $(DESTDIR)/var/run/
+
+	mkdir -p $(DESTDIR)/etc/sudoers.d/
+	echo "cloudover ALL=NOPASSWD: /usr/sbin/openvpn" >> $(DESTDIR)/etc/sudoers.d/corevpn
+
 	chmod 600 $(DESTDIR)/var/lib/cloudOver/coreVpn/certs/
 	chown cloudover:cloudover $(DESTDIR)/var/lib/cloudOver/coreVpn/certs
