@@ -1,5 +1,6 @@
 corevpn (0.1.3) unstable; urgency=low
 
+  * cloudover user can call openvpn by sudo
   * Changes in agent
   * Added suspended state for VPN entity
 
